fix(ui): increase visibility of registered group members

--- a/src/app/assessment-overview/registered-groups/registered-groups.component.scss
+++ b/src/app/assessment-overview/registered-groups/registered-groups.component.scss
@@ -24,3 +24,7 @@
 .name-column {
 	width: 128px;
 }
+
+.participant-chip {
+	background-color: #747474;
+}
